@@ -23,7 +23,7 @@ requires 'Catalyst::Plugin::Session' => '0.10';
 requires 'Moose';
 requires 'MooseX::Emulate::Class::Accessor::Fast';
 requires 'namespace::clean';
-
+requires 'String::RewritePrefix';
 
 test_requires 'Test::More' => '0.88';
 test_requires 'Test::Exception';
