@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Authentication
 
+    - Change Catalyst::Authentication::Realm to use String::RewritePrefix
+      rather than doing namespace mangling manually.
     - Fix whitespace and tabs, add Test::EOL and Test::NoTabs
     - Document optional methods in stores needed for auto_create_user
       and auto_update_user in realms.
